--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,8 @@
+user:
+    resource: "@SMTCUserBundle/Controller/"
+    type:     annotation
+    prefix:   /
+
 main:
     resource: "@MainBundle/Controller/"
     type:     annotation
