--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -12,5 +12,5 @@ parameters:
     mailer_user:       ~
     mailer_password:   ~
 
-    locale:            en
+    locale:            es
     secret:            ThisTokenIsNotSoSecretChangeIt
