Add logout route

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -25,7 +25,10 @@ security:
 
         secured_area:
             pattern:    ^/
+            provider: in_memory
             anonymous: ~
+            logout:
+                path: logout
 
     access_control:
         #- { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
