Updated Events example

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -57,3 +57,8 @@ swiftmailer:
 
 parameters:
     github_repository: https://github.com/showmethecodeteam/showmethecode
+    banned_words:
+        - show
+        - me
+        - the
+        - code
