--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,9 @@
+_static_routing:
+    resource: static_routing.yml
+
+_legacy_routing:
+    resource: legacy_routing.yml
+
 logout:
     pattern: /logout
 
