Removed parameters.yml and added smtc_button_msg parameter

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -24,6 +24,7 @@ twig:
     globals:
         global:
             banned_words: %banned_words%
+            button_msg: %smtc_button_msg%
 
 # Assetic Configuration
 assetic:
