--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -14,3 +14,5 @@ parameters:
 
     locale:            es
     secret:            ThisTokenIsNotSoSecretChangeIt
+
+    smtc_button_msg:   "Visitar el Blog »"
